--- a/templates/index.html
+++ b/templates/index.html
@@ -4,28 +4,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Malicious Traffic Detector</title>
+    <link href="https://fonts.googleapis.com/css2?family=Protest+Riot&display=swap" rel="stylesheet">
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f2f2f2;
+            background: rgb(109,57,147);
+background: linear-gradient(90deg, rgba(109,57,147,1) 0%, rgba(131,58,180,0.0845588235294118) 0%, rgba(252,176,69,1) 0%, rgba(0,0,0,1) 0%, rgba(6,6,38,0.8996848739495799) 42%, rgba(13,13,79,1) 89%);
             margin: 0;
             padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
         }
 
+        .navbar {
+             background-color: #f1efef;
+            box-shadow: 0px 46px 56px 18px rgba(0,0,0,0.1);
+             margin: 5px 10px 0px 10px;
+            padding: 10px 0;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            border-radius: 10px;
+        }
+
+        .navbar img {
+            width: 250px; /* Adjust the width as needed */
+            height: 60px;
+            margin-left: 20px;
+        }
+
+
+
         .container {
-            background-color: #fff;
+            background-color: #f1efef;
             padding: 20px;
             border-radius: 10px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        }
+            margin: 20px auto;
+            width: 80%;
+            margin-top: 90px;
+box-shadow: 0px 0px 50px 56px rgba(0,0,0,0.1);        }
 
         h1 {
             text-align: center;
-            margin-bottom: 20px;
+             font-family: "Protest Riot", sans-serif;
+            margin-bottom: 25px;
             color: #333;
         }
 
@@ -41,6 +61,7 @@
             font-size: 16px;
             margin-bottom: 10px;
             outline: none;
+
         }
 
         button[type="submit"] {
@@ -51,6 +72,7 @@
             padding: 10px 20px;
             font-size: 16px;
             cursor: pointer;
+             font-family: "Protest Riot", sans-serif;
             transition: background-color 0.3s;
         }
 
@@ -69,11 +91,26 @@
             margin-top: 20px;
         }
        .spinner-message {
-    display: flex;
-    justify-content: center;
-    text-align: center; /* This might not be necessary depending on your specific use case */
-}
+            display: flex;
+            justify-content: center;
+            text-align: center;
+             font-family: "Protest Riot", sans-serif;
+        }
 
+        .footer {
+
+            color: black;
+            text-align: center;
+            position: fixed;
+            bottom: 0;
+            width: 99%;
+            background-color: #f1efef;
+            box-shadow: 0px -54px 56px 18px rgba(0,0,0,0.1);
+             margin: 0px 10px 5px 10px;
+            padding: 10px 0;
+            border-radius: 10px;
+             font-family: "Protest Riot", sans-serif;
+        }
 
         @keyframes spin {
             0% { transform: rotate(0deg); }
@@ -86,6 +123,11 @@
     </style>
 </head>
 <body>
+    <div class="navbar">
+        <img src="https://i.postimg.cc/gJk2RnkX/mtd.png" alt="Logo" />
+
+    </div>
+
     <div class="container">
         <h1>Malicious Traffic Detector</h1>
         <form id="uploadForm" method="post" enctype="multipart/form-data">
@@ -96,6 +138,10 @@
             <div class="spinner"></div>
             <p class="spinner-message">Uploading file...</p>
         </div>
+    </div>
+
+    <div class="footer">
+        <p>&copy; 2024 Malicious Traffic Detector. All rights reserved.</p>
     </div>
 
     <script>
