--- a/templates/preprocessing.html
+++ b/templates/preprocessing.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Data Preprocessing</title>
+        <link href="https://fonts.googleapis.com/css2?family=Protest+Riot&display=swap" rel="stylesheet">
+
     <style>
  body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #f9f9f9;
+            background: rgb(109,57,147);
+background: linear-gradient(90deg, rgba(109,57,147,1) 0%, rgba(131,58,180,0.0845588235294118) 0%, rgba(252,176,69,1) 0%, rgba(0,0,0,1) 0%, rgba(6,6,38,0.8996848739495799) 42%, rgba(13,13,79,1) 89%);
             margin: 0;
             padding: 0;
             display: flex;
@@ -32,6 +35,8 @@
             text-transform: uppercase;
             letter-spacing: 2px;
             font-weight: 600;
+             font-family: "Protest Riot", sans-serif;
+
         }
 
 
@@ -55,6 +60,7 @@
     text-align: center;
     background-color: #007bff;
     color: #ffffff;
+                 font-family: "Protest Riot", sans-serif;
     text-decoration: none;
     border-radius: 5px;
     transition: background-color 0.3s ease;
